# Notes

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Main.qml  main.cpp
src/Notes/: NotesModel.cpp  NotesModel.h
src/Notes/NotesEditor/: NotesEditor.qml
src/Notes/NotesList/: NotesList.qml
